--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,17 @@
     <string name="add">Add</string>
     <string name="daily_total">Daily Total</string>
     <string name="annual_total">Annual Total</string>
-    <string name="app_name">My Application</string>
-    <string name="action_settings">Settings</string>
+    <string name="clear">Clear All Items</string>
+    <string name="clear_verification">This will completely delete all recorded distances. Are you sure?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="login_name">Login Name</string>
+    <string name="login">Login</string>
+
+    <string name="app_name">Trip Tracker</string>
+    <string name="display_list">Display Item List</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="first_fragment_label">Add Distance</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
